new branch with ffmpeg tweaks and default to keep original file

--- a/PlexComskip.conf
+++ b/PlexComskip.conf
@@ -41,4 +41,4 @@ save-forensics: True
 convert-to-mp4: True
 
 # Useful when not converting file - the new file is given a different name from the original to preserve the original
-keep-original: False
+keep-original: True
